# tinygen

./: Dockerfile  README.md  input.json  pyproject.toml
src/tinygen/: __init__.py  app.py  consts.py  git_utils.py  openai_utils.py
tests/: test_app.py
